<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_dashboard"
        android:icon="@drawable/ic_dashboard"
        android:title="@string/nav_dashboard" />
    <item
        android:id="@+id/nav_attendance"
        android:icon="@drawable/ic_attendance"
        android:title="@string/nav_attendance" />
    <item
        android:id="@+id/nav_reports"
        android:icon="@drawable/ic_reports"
        android:title="@string/nav_reports" />
    <item
        android:id="@+id/nav_employees"
        android:icon="@drawable/ic_employees"
        android:title="@string/nav_employees" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/nav_settings" />
</menu>
